--- a/app/src/main/res/layout/content_draw_text.xml
+++ b/app/src/main/res/layout/content_draw_text.xml
@@ -22,7 +22,7 @@
                 android:paddingBottom="10dp"
         />
 
-        <TextView
+        <!--<TextView
                 android:layout_height="0dp"
                 android:layout_width="fill_parent"
                 android:layout_weight="1"
@@ -30,9 +30,27 @@
                 android:textColor="#AAA"
                 android:textSize="100sp"
                 android:gravity="center"
-        />
+        />-->
 
+        <LinearLayout
+          android:layout_width="fill_parent"
+          android:layout_height="0dp"
+          android:layout_weight="1"
+          android:paddingBottom="10dp" >
+            <com.sabatie.felix.learntodraw.PaintView
+              android:id="@+id/paintView"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent" />
+        </LinearLayout>
 
+        <TextView
+          android:layout_height="50dp"
+          android:layout_width="fill_parent"
+          android:text="Suivant"
+          android:textColor="#FFF"
+          android:textSize="20sp"
+          android:gravity="center"
+          android:background="@color/colorPrimary"/>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
