Better stuff and erasing

--- a/app/src/main/res/layout/content_draw_text.xml
+++ b/app/src/main/res/layout/content_draw_text.xml
@@ -15,24 +15,14 @@
             android:padding="5dp"
     >
         <TextView
-                android:text="Maintenant, écris le mot &quot;Chat&quot; en suivant les traits"
+                android:id="@+id/instructionsText"
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
         />
 
-        <!--<TextView
-                android:layout_height="0dp"
-                android:layout_width="fill_parent"
-                android:layout_weight="1"
-                android:text="Chat"
-                android:textColor="#AAA"
-                android:textSize="100sp"
-                android:gravity="center"
-        />-->
-
-        <LinearLayout
+        <RelativeLayout
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
@@ -41,7 +31,22 @@
               android:id="@+id/paintView"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent" />
-        </LinearLayout>
+            <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:padding="10dp">
+                <ImageView
+                  android:layout_height="wrap_content"
+                  android:layout_width="60dp"
+                  android:adjustViewBounds="true"
+                  android:scaleType="fitCenter"
+                  android:src="@drawable/erase"
+                  android:layout_gravity="end"
+                  android:onClick="resetCanvas"
+                  />
+            </LinearLayout>
+        </RelativeLayout>
 
         <TextView
           android:layout_height="50dp"
