--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,75 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  tools:context=".MainActivity">
 
-    <LinearLayout
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent"
-            android:orientation="vertical"
-            android:padding="5dp"
-            android:weightSum="100"
+  <LinearLayout
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:orientation="vertical"
     >
-        <TextView
-                android:text="Comment écrit-on ce qui est représenté sur le dessin ?"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
+    <TextView
+      android:text="Comment écrit-on ce qui est représenté sur le dessin ?"
+      android:textSize="20sp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="5dp"
+      android:paddingBottom="10dp"
+      />
+    <ImageView
+      android:id="@+id/MainImage"
+      android:layout_height="0dp"
+      android:layout_width="wrap_content"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      android:adjustViewBounds="true"
+      android:scaleType="fitCenter"
+      android:src="@drawable/cat"/>
+    <LinearLayout
+      android:layout_height="0dp"
+      android:layout_width="fill_parent"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      android:paddingTop="10dp"
+      >
+      <TextView
+        android:layout_height="fill_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:text="Shat"
+        android:gravity="center"
+        android:onClick="displayFalse"
+        android:background="@color/backgroundColor1"
         />
-        <ImageView
-                android:id="@+id/MainImage"
-                android:layout_height="0dp"
-                android:layout_width="wrap_content"
-                android:layout_weight="50"
-                android:layout_gravity="center"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/cat" />
-        <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-        >
-            <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="Shat"
-                    android:onClick="displayFalse"
-            />
-            <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="Cha"
-                    android:onClick="displayFalse"
-            />
-            <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="Chat"
-                    android:onClick="displayTrue"
-            />
-        </LinearLayout>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/Response"
-                android:textStyle="bold"
+      <TextView
+        android:layout_height="fill_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:text="Cha"
+        android:gravity="center"
+        android:onClick="displayFalse"
+        android:background="@color/backgroundColor2"
         />
-
-        <Button
-                android:id="@+id/nextButton"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="Suivant"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:onClick="navigate"
+      <TextView
+        android:layout_height="fill_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:text="Chat"
+        android:gravity="center"
+        android:onClick="displayTrue"
+        android:background="@color/backgroundColor3"
         />
     </LinearLayout>
+    <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/Response"
+            android:textStyle="bold"
+    />
+
+    <Button
+            android:id="@+id/nextButton"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Suivant"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:onClick="navigate"
+    />-->
+  </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
