--- a/app/src/main/res/layout/fragment_response_button.xml
+++ b/app/src/main/res/layout/fragment_response_button.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="0dp"
-  android:layout_height="fill_parent"
-  android:layout_weight="1"
-  tools:context=".ResponseButton">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="0dp"
+             android:layout_height="fill_parent"
+             android:layout_weight="1"
+             android:id="@+id/container"
+             tools:context=".ResponseButton">
 
-  <TextView
-    android:id="@+id/responseText"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    android:gravity="center"
+    <TextView
+            android:id="@+id/responseText"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:gravity="center"
     />
 
 </FrameLayout>
