--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="drawingColor">#FF4081</color>
     <color name="textToDrawColor">#999</color>
     <color name="backgroundColor1">#ec644b</color>
-    <color name="backgroundColor2">#81cfe0</color>
+    <color name="backgroundColor2">#00b5cc</color>
     <color name="backgroundColor3">#4daf7c</color>
 </resources>
