--- a/app/src/main/res/layout/activity_draw_text.xml
+++ b/app/src/main/res/layout/activity_draw_text.xml
@@ -1,27 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DrawText">
+<android.support.constraint.ConstraintLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  app:layout_behavior="@string/appbar_scrolling_view_behavior"
+  tools:showIn="@layout/activity_draw_text"
+  tools:context=".DrawText">
+    <LinearLayout
+      android:layout_height="fill_parent"
+      android:layout_width="fill_parent"
+      android:orientation="vertical"
+      android:padding="5dp"
+      >
+        <TextView
+          android:id="@+id/instructionsText"
+          android:textSize="20sp"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:paddingBottom="10dp"
+          />
 
-    <android.support.design.widget.AppBarLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay">
+        <RelativeLayout
+          android:layout_width="fill_parent"
+          android:layout_height="0dp"
+          android:layout_weight="1"
+          android:paddingBottom="10dp" >
+            <com.sabatie.felix.learntodraw.PaintView
+              android:id="@+id/paintView"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent" />
+            <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:padding="10dp">
+                <ImageView
+                  android:layout_height="wrap_content"
+                  android:layout_width="60dp"
+                  android:adjustViewBounds="true"
+                  android:scaleType="fitCenter"
+                  android:src="@drawable/erase"
+                  android:layout_gravity="end"
+                  android:onClick="resetCanvas"
+                  />
+            </LinearLayout>
+        </RelativeLayout>
 
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+        <TextView
+          android:layout_height="50dp"
+          android:layout_width="fill_parent"
+          android:text="Suivant"
+          android:textColor="#FFF"
+          android:textSize="20sp"
+          android:gravity="center"
+          android:background="@color/colorPrimary"/>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_draw_text"/>
-
-
-</android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
+</android.support.constraint.ConstraintLayout>
