Whole game navigation working

--- a/app/src/main/res/layout/activity_draw_text.xml
+++ b/app/src/main/res/layout/activity_draw_text.xml
@@ -55,6 +55,7 @@
           android:textColor="#FFF"
           android:textSize="20sp"
           android:gravity="center"
+          android:onClick="onNextClick"
           android:background="@color/colorPrimary"/>
 
     </LinearLayout>
