Choose category working

--- a/app/src/main/res/layout/activity_choose_category.xml
+++ b/app/src/main/res/layout/activity_choose_category.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".ChooseCategory">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ChooseCategory">
 
 
+    <LinearLayout
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+        <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="Choisis une catégorie de jeu"
+                android:layout_marginBottom="20dp"
+                android:textSize="30sp"/>
+
+        <LinearLayout
+                android:layout_height="0dp"
+                android:layout_width="fill_parent"
+                android:id="@+id/gameItemsContainer"
+                android:orientation="horizontal"
+                android:layout_weight="1"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
