Bug fixes & optimisations

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="backgroundColor2">#00b5cc</color>
     <color name="backgroundColor3">#4daf7c</color>
     <color name="red">#cf000f</color>
+    <color name="transparent">#80000000</color>
 </resources>
